# zk-llm-proof

./: .gitignore  Makefile  README.md  plan.md  pyproject.toml
.github/workflows/: ci.yml
tests/: test_backend.py  test_circuit.py  test_cli.py  test_crypto.py  test_e2e.py  test_instrumentation.py  test_model.py  test_prover.py  test_verifier.py
zkllms/: backend.py  circuit.py  cli.py  crypto.py  instrumentation.py  model.py  prover.py  verifier.py
